--- a/game-configs.json
+++ b/game-configs.json
@@ -5,37 +5,37 @@
     "printActStrings":false,
     "printHitStrings":false,
     "printPlayerInputStrings":false,
-    "printBotErrors":false,
+    "printBotErrors":true,
     "printPlayerGetHitStrings":false
   },
   "unitInformation":[
     {
       "damage":0.0,
-      "cost":3.0,
+      "cost":1.0,
       "getHitRadius":0.51,
       "display":"Filter",
       "range":0.0,
       "shorthand":"FF",
-      "stability":180.0
+      "stability":60.0
     },
     {
       "damage":0.0,
-      "cost":1.0,
+      "cost":4.0,
       "getHitRadius":0.51,
-      "shieldAmount":1.0,
+      "shieldAmount":3.0,
       "display":"Encryptor",
-      "range":1.5,
+      "range":3.0,
       "shorthand":"EF",
-      "stability":6.0
+      "stability":30.0
     },
     {
-      "damage":7.0,
-      "cost":2.0,
+      "damage":16.0,
+      "cost":6.0,
       "getHitRadius":0.51,
       "display":"Destructor",
       "range":3.0,
       "shorthand":"DF",
-      "stability":35.0
+      "stability":75.0
     },
     {
       "damageI":2.0,
@@ -50,23 +50,23 @@
       "speed":1
     },
     {
-      "damageI":12.0,
+      "damageI":8.0,
       "damageToPlayer":1.0,
       "cost":3.0,
       "getHitRadius":0.51,
-      "damageF":12.0,
+      "damageF":8.0,
       "display":"EMP",
       "range":4.0,
       "shorthand":"EI",
-      "stability":1.0,
-      "speed":1
+      "stability":5.0,
+      "speed":0.5
     },
     {
       "damageI":20.0,
       "damageToPlayer":1.0,
       "cost":1.0,
       "getHitRadius":0.51,
-      "damageF":0.2,
+      "damageF":0.0,
       "display":"Scrambler",
       "range":4.0,
       "shorthand":"SI",
